...
    VaultAccess.MatchedCredential(
        id: "3", name: "1password", username: "jdpneto@gmail.com",
        password: "p", url: "https://1password.com",
        appIdentifiers: [], totp: nil, isMatch: false
    ),
    VaultAccess.MatchedCredential(
        id: "4", name: "9gag.com", username: "jdpneto@gmail.com",
        password: "p", url: "https://9gag.com",
        appIdentifiers: [], totp: nil, isMatch: false
    ),
    VaultAccess.MatchedCredential(
        id: "5", name: "github.com", username: "dneto",
        password: "p", url: "https://github.com",
...
